Fix alignment

--- a/styles/base/_settings.scss
+++ b/styles/base/_settings.scss
@@ -30,6 +30,7 @@ $items-margin: 2px;
 $login-box-width: 40rem;
 $login-box-breakpoint: 27.5rem;
 $max-width: 90rem;
+$max-width-landing: 100rem;
 
 // Misc
 $hover-opacity: 0.75;
