--- a/styles/components/_arguments.scss
+++ b/styles/components/_arguments.scss
@@ -41,6 +41,9 @@
 
   footer {
     margin-top: 3rem;
-    margin-bottom: 5rem;
+		margin-bottom: 5rem;
+		display: flex;
+		align-items: center;
+		flex-direction: column;
   }
 }
