--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -1,8 +1,5 @@
 .button-container {
-	// display: flex;
-	flex-shrink: 0;
-	flex-direction: column; // Prevents height change by parent (display: flex)
-	margin-right: 1rem;
+	display: flex;
 	
 	a:hover {
 		opacity: 1;
