--- a/styles/components/_cta.scss
+++ b/styles/components/_cta.scss
@@ -1,3 +1,9 @@
 .cta {
 	text-align: center;
+
+	&__content {
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+	}
 }
