--- a/styles/components/_splash.scss
+++ b/styles/components/_splash.scss
@@ -33,7 +33,7 @@
   }
 
   &__left {
-		width: 40rem;
+		width: 50rem;
 		min-width: 40rem;
     margin-right: 5rem;
 		height: auto;
