--- a/styles/mixins/_content-container.scss
+++ b/styles/mixins/_content-container.scss
@@ -1,23 +1,22 @@
 @mixin content-container {
-	max-width: $max-width;
-	margin: 0 auto;
-	padding: 0 $l-size;
-	@media (max-width: $desktop-breakpoint) {
-		padding: 0 $m-size;
-	}
-	height: auto;
+  max-width: $max-width-landing;
+  margin: 0 auto;
+  padding: 0 $l-size;
+  @media (max-width: $desktop-breakpoint) {
+    padding: 0 $m-size;
+  }
+  height: auto;
 }
 
 @mixin dashboard-content-container {
-	max-width: $max-width;
-	margin: 0 auto;
-	padding: 0 $m-size;
-	height: auto;
+  max-width: $max-width;
+  margin: 0 auto;
+  padding: 0 $m-size;
+  height: auto;
 }
 
 @mixin user-content-container {
-	max-width: $max-width;
-	margin: 0 auto;
-	height: auto;
+  max-width: $max-width;
+  margin: 0 auto;
+  height: auto;
 }
-
